# DevTools

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp
src/: CMakeLists.txt  mainwindow.h
src/boost_test/: CMakeLists.txt  boost_main.cpp  boost_test.cpp
src/design_pattern/: CMakeLists.txt  test.cc
src/design_pattern/01_prototype/: concreate_prototype.h  prototype.cc  prototype.h
src/devtools/: CMakeLists.txt  main.cpp  main_win.ui  mainwindow.cpp
src/test_case/: CMakeLists.txt  main.cpp  test_case.h
src/ut/: CMakeLists.txt  test_main.cpp
third/glog/include/glog/: logging.h
third/glog/lib/cmake/glog/: glog-targets.cmake
